fix: Button overflow on small sidebar

--- a/integrations/nextcloud/snappymail/app/themes/Nextcloud25/styles.css
+++ b/integrations/nextcloud/snappymail/app/themes/Nextcloud25/styles.css
@@ -461,6 +461,7 @@ html.rl-left-panel-disabled #rl-app #rl-left {
     width: -webkit-fill-available;
     width: -moz-available;
     width: fill-available;
+    overflow: hidden;
 }
 
 #rl-app .b-footer.btn-toolbar .btn-group.hide-on-panel-disabled .btn.fontastic {
